--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/ezyshop/api
 logging.level.org.springframework.security.web.*=debug
 
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/tfg
+spring.datasource.url=jdbc:postgresql://localhost:5432/fct
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
