--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fct
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
+
+#Depurar
+spring.boot.devtools.remote.debug=true
