--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ logging.level.org.springframework.security.web.*=debug
 
 server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/fct
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
  #KEY JWT
- key.jwt=Ezyshop
+key.jwt=Ezyshop
  #Depurar
 spring.boot.devtools.remote.debug=true
 
