--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ cloud.name=dpfmihznr
 api.key=827419171451897
 api.secret=o2rFoTUxeBdXR1SnzZD09lZIVbQ
 api.env.variable=CLOUDINARY_URL=cloudinary://827419171451897:o2rFoTUxeBdXR1SnzZD09lZIVbQ@dpfmihznr
+
+ #Consultas
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
