--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-#spring.profiles.active=dev
+spring.profiles.active=prod
 server.servlet.context-path=/ezyshop/api
 #spring.banner.location=classpath:banner.txt
 logging.level.org.springframework.security.web.*=debug
 
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/fct
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
