--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 server.servlet.context-path=/ezyshop/api
 #spring.banner.location=classpath:banner.txt
 logging.level.org.springframework.security.web.*=debug
