subida de docker y todo

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,2 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/produccion
+spring.datasource.url=jdbc:postgresql://db_postgres:5432/produccion
+#spring.datasource.url=jdbc:postgresql://localhost:5432/produccion
