--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>TFG_Ezyshop_Backend</groupId>
 	<artifactId>TFG_Ezyshop_Backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Ezyshop</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
