--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.servlet.context-path=/ezyshop/api
 logging.level.org.springframework.security.web.*=debug
 
 server.port=8081
-spring.datasource.username=admin
-spring.datasource.password=admin
+#spring.datasource.username=admin
+#spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
  #KEY JWT
